--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sample App</h1>
+
+<%= form_for(@user) do |f| %>
+  <div class="field" >
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  
+  <div class="actions" >
+    <%= f.submit "Sign up" %>
+  </div>
+<% end %>
